--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,26 +7,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM</title>
+    <link rel="stylesheet" type='text/css' href="{% static '/css/main.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<style>
-    #logo{
+    <style>
+        #logo {
+            height: 50px;
+            width: 40px;
 
-    }
-   
-    body{
-        background-color:#ebeffe;
-    }
-    #total-orders{
-        background-color: #4cb4c7;
-    }
-    #orders-delivered{
-        background-color: #7abecc;
-    }
-    #orders-Pending{
-        background-color: #7CD1C0;
-    }
-</style>
+
+        }
+
+        body {
+            background-color: #ebeffe;
+        }
+
+        #total-orders {
+            background-color: #4cb4c7;
+        }
+
+        #orders-delivered {
+            background-color: #7abecc;
+        }
+
+        #orders-Pending {
+            background-color: #7CD1C0;
+        }
+    </style>
 </head>
 
 <body>
@@ -34,7 +43,7 @@
 
     {% endblock%}
     <hr>
-    <p>Footer</p> 
+    <p>Footer</p>
 </body>
 
 
