--- a/accounts/templates/accounts/Dashboard.html
+++ b/accounts/templates/accounts/Dashboard.html
@@ -14,10 +14,17 @@
 
         <table class='table table-sm'>
             <tr>
-                <th></th>
+                
                 <th>Customers</th>
-                <th>Orders</th>
+                <th>Phone</th>
             </tr>
+            {% for customer in customers %}
+            <tr>
+                <td>{{ customers.name}}</td>
+                <td>{{ customer.phone}}</td>
+                <td></td>
+            </tr>
+            {% endfor  %}
         </table>
     </div>
 </div>
@@ -34,6 +41,13 @@
                 <th>Update</th>
                 <th>Remove</th>
             </tr>
+        {% for order in orders %}
+        <tr>
+            <td>{{ order.product}}</td>
+            <td>{{ order.date_created}}</td>
+            <td>{{ order.status}}</td>
+        </tr>
+        {% endfor  %}
         </table>
     </div>
 </div>
