--- a/accounts/templates/accounts/Dashboard.html
+++ b/accounts/templates/accounts/Dashboard.html
@@ -41,11 +41,13 @@
                 <th>Update</th>
                 <th>Remove</th>
             </tr>
-        {% for order in orders %}
+        {% for i in orders %}
         <tr>
             <td>{{ order.product}}</td>
             <td>{{ order.date_created}}</td>
             <td>{{ order.status}}</td>
+            <td><a href="">Update</a></td>
+            <td><a href="">Delete</a></td>
         </tr>
         {% endfor  %}
         </table>
