--- a/accounts/templates/accounts/status.html
+++ b/accounts/templates/accounts/status.html
@@ -7,8 +7,8 @@
                     <h5 class="card-title" id="total-orders">Total orders</h5>
 
                 </div>
-                <div class="card-title">
-                    <h3></h3>
+                <div class="card-body">
+                    <h3 class="card-title">{{total_orders}}</h3>
                 </div>
             </div>
 
@@ -23,7 +23,7 @@
 
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{delivered}}</h3>
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
 
         </div>
         <div class="card-body">
-            <h3 class="card-title"></h3>
+            <h3 class="card-title">{{pending}}</h3>
         </div>
     </div>
 </div>
