--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -17,15 +17,15 @@
       <div class="card card-body">
         <h5>Contact Information</h5>
         <hr>
-        <p>Email:</p>
-        <p>Phone:</p>
+        <p>Email:{{customer.email}}</p>
+        <p>Phone: {{customer.Phone}}</p>
       </div>
     </div>
 <div class="col-md">
   <div class='card card-body'>
     <h5>Total order</h5>
     <hr>
-    <h1 style="text-align: center;padding: 10px;"></h1>
+    <h1 style="text-align: center;padding: 10px;">{{order_count}}</h1>
 
   </div>
 </div>
@@ -55,6 +55,19 @@
               <th>Update</th>
               <th>Remove</th>
             </tr> 
+
+            {% for order in orders %}
+              <tr>
+                <th>{{order.product}}</th>
+                <th>{{order.product.category}}</th>
+                <th>{{order.date of order}</th>
+                <th>{{order.status}}</th>
+                <th><a class="btn btn-sm btn-info" href="">Update</a></th>
+                <th><a class="btn btn-sm btn-danger" href="">Remove</a></th>
+                
+              </tr>
+            {% endfor %}
+            </tr>
           </table>
         </div>
       </div>
